encrypt-pre-alpha/chains/solana/program-sdk/dsl/tests/compile_fail/unknown_bitvec_type.stderr
error: unknown FHE type: E3BitVector
 --> tests/compile_fail/unknown_bitvec_type.rs:8:11
  |
8 | fn bad(a: E3BitVector) -> E3BitVector {
  |           ^^^^^^^^^^^
